# haiv

./: CLAUDE.md  conftest.py  haiv.toml  mg.toml  pyproject.toml  rename-paths.py  sedi  test-all.sh  type-all.sh
haiv/: README.md  pyproject.toml
haiv-cli/: pyproject.toml
haiv-cli/src/haiv_cli/: __init__.py
haiv-cli/tests/: test_command_sources.py  test_imports.py
haiv-core/: README.md  pyproject.toml
haiv-core/src/haiv_core/: __init__.py  haiv_hook_points.py
haiv-core/src/haiv_core/__assets__/chart/: example-journey.md  explore-embark.md.j2  explore-entry.md.j2  explore-plan.md.j2  explore-reflect.md.j2  explore-return.md.j2  explore-start-needs-name.md.j2  explore-start.md.j2  research-log.md.j2
haiv-core/src/haiv_core/__assets__/init/: CLAUDE.md.j2  pyproject.toml.j2
haiv-core/src/haiv_core/__assets__/minds/: references.toml.j2  welcome.md.j2
haiv-core/src/haiv_core/__assets__/users/: pyproject.toml.j2
haiv-core/src/haiv_core/commands/: __init__.py  chart.py  help.py  init.py  pop.py
haiv-core/src/haiv_core/commands/become/: _mind_.py
haiv-core/src/haiv_core/commands/chart/: _index_.py  explore.py
haiv-core/src/haiv_core/commands/minds/: stage.py
haiv-core/src/haiv_core/commands/start/: __init__.py
haiv-core/src/haiv_core/commands/users/: new.py
haiv-core/src/haiv_core/resolvers/: session.py
haiv-core/tests/: test_become.py  test_chart.py  test_chart_explore.py  test_help.py  test_imports.py  test_init.py  test_init_unit.py  test_minds_stage.py  test_mine.py  test_pop.py  test_start.py  test_start_mind.py  test_users_new.py
haiv/src/haiv/: __init__.py  cmd.py  paths.py  settings.py
haiv/src/haiv/_infrastructure/: loader.py  settings.py
haiv/src/haiv/_infrastructure/TuiServer/: _TuiIpc.py  _TuiIpcListener.py  _TuiServer.py
haiv/src/haiv/helpers/: commands.py  sessions.py
haiv/src/haiv/helpers/tui/: _base.py  terminal.py  tui.py
haiv/src/haiv/wrappers/: wezterm.py
haiv/src/haiv_meta/: __init__.py
haiv/tests/: test_cmd.py  test_commands_helper.py  test_file_watcher.py  test_haiv_hooks.py  test_identity.py  test_loader.py  test_minds_helper.py  test_packages_helper.py  test_paths.py  test_routing.py  test_tui_model.py  test_users_helper.py
haiv/tests/fixtures/fake_commands/commands/: simple.py
mg/: LICENSE  README.md  pyproject.toml
mg-cli/: README.md  pyproject.toml
mg-cli/src/mg_cli/: __init__.py
mg-cli/tests/: test_command_sources.py  test_imports.py
mg-core/: README.md  pyproject.toml
mg-core/src/mg_core/: __init__.py  events.py  mg_hook_points.py
mg-core/src/mg_core/__assets__/init/: CLAUDE.md.j2  pyproject.toml.j2
mg-core/src/mg_core/__assets__/minds/: references.toml.j2  welcome.md.j2
mg-core/src/mg_core/__assets__/pop/: aar.md.j2
mg-core/src/mg_core/__assets__/users/: pyproject.toml.j2
mg-core/src/mg_core/commands/: __init__.py  help.py  init.py  mine.py  pop.py  test_cmd.py  tmux.py
mg-core/src/mg_core/commands/become/: __init__.py  _mind_.py
mg-core/src/mg_core/commands/fix/: __init__.py  _mind_.py
mg-core/src/mg_core/commands/minds/: __init__.py  new.py  stage.py
mg-core/src/mg_core/commands/sessions/: __init__.py  _index_.py
mg-core/src/mg_core/commands/start/: _index_.py  _mind_.py
mg-core/src/mg_core/commands/tui/: debug.py
mg-core/src/mg_core/commands/users/: __init__.py  new.py
mg-core/src/mg_core/helpers/: __init__.py  commands.py  minds.py  packages.py  users.py
mg-core/src/mg_core/resolvers/: mind.py  session.py
mg-core/tests/: test_become.py  test_commands_helper.py  test_help.py  test_imports.py  test_init.py  test_init_unit.py  test_minds_helper.py  test_minds_new.py  test_minds_stage.py  test_mine.py  test_packages.py  test_pop.py  test_sessions.py  test_start.py  test_start_mind.py  test_users_helper.py  test_users_new.py  test_users_new_unit.py
mg-tui/: pyproject.toml
mg-tui/src/mg_tui/: __init__.py  app.py  init.py  store.py
mg-tui/src/mg_tui/widgets/: markdown_file.py  sessions.py
mg/src/mg/: __init__.py  args.py  cmd.py  env.py  errors.py  git.py  hooks.py  identity.py  loader.py  mg_hooks.py  paths.py  resolvers.py  routing.py  runner.py  settings.py  templates.py  test.py  tmux.py  util.py
mg/src/mg/_infrastructure/: __init__.py  args.py  env.py  hooks.py  identity.py  loader.py  mg_hooks.py  resolvers.py  routing.py  runner.py  settings.py
mg/src/mg/_infrastructure/TuiServer/: _TuiIpc.py  _TuiIpcListener.py  _TuiLocalClient.py  _TuiServer.py  __init__.py  _freeze.py
mg/src/mg/helpers/: commands.py  minds.py  packages.py  sessions.py  users.py
mg/src/mg/helpers/tui/: TuiClient.py  TuiModel.py  __init__.py  _base.py  helpers.py  terminal.py  tui.py
mg/src/mg/helpers/utils/: __init__.py  file_watcher.py  message_handler.py
mg/src/mg/wrappers/: __init__.py  git.py  tmux.py  wezterm.py
mg/tests/: test_args.py  test_cmd.py  test_commands_helper.py  test_file_watcher.py  test_git.py  test_identity.py  test_loader.py  test_message_handler.py  test_mg_hooks.py  test_minds_helper.py  test_packages_helper.py  test_paths.py  test_resolvers.py  test_routing.py  test_sandbox.py  test_sandbox_pkg.py  test_sessions_helper.py  test_settings.py  test_templates.py  test_terminal_manager.py  test_testing.py  test_tmux.py  test_trees.py  test_tui_client.py  test_tui_helpers.py  test_tui_model.py  test_tui_server.py  test_users_helper.py
mg/tests/fixtures/fake_commands/commands/: simple.py
users/casey/: identity.toml  mg.toml  pyproject.toml
users/casey/src/haiv_user/: __init__.py
users/casey/src/haiv_user/commands/: __init__.py
users/casey/src/mg_user/: __init__.py
users/casey/state/: sessions.ig.toml
users/casey/state/minds/echo/: references.toml
users/casey/state/minds/ember/: references.toml
users/casey/state/minds/nimbus/: references.toml
users/casey/state/minds/pixel/: references.toml
users/casey/state/minds/pulse/: references.toml
users/casey/state/minds/sage/: references.toml
users/casey/state/minds/smoke/: references.toml
users/casey/state/minds/spark/: references.toml
users/casey/state/minds/wren/: references.toml
(+251 files in other folders)
