
[project]
name = "haiv-project"
version = "0.1.0"
description = "Project-level haiv commands and configuration"
requires-python = ">=3.12"
dependencies = [
    "haiv",
    "haiv-cli",
    "haiv-tui",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
haiv = { path = "worktrees/main/haiv", editable = true }
haiv-cli = { path = "worktrees/main/haiv-cli", editable = true }
haiv-tui = { path = "worktrees/main/haiv-tui", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/haiv_project"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
