[project]
name = "haiv-workspace"
version = "0.1.0"
description = "Seamless management of a collaborative AI team"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Casey Marquis" }
]

[tool.uv.workspace]
members = ["haiv", "haiv-lib", "haiv-core", "haiv-cli", "haiv-tui"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
]

[tool.pytest.ini_options]
testpaths = []
