[project]
name = "haiv-cli"
version = "0.1.0"
description = "Seamless management of a collaborative AI team"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Casey Marquis" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "haiv-core",
]

[project.scripts]
hv = "haiv_cli:main"

[tool.uv.sources]
haiv-core = { workspace = true }

[project.urls]
Homepage = "https://github.com/caseymarquis/haiv"
Repository = "https://github.com/caseymarquis/haiv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haiv_cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.0",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
