[project]
name = "haiv-core"
version = "0.1.0"
description = "Core commands for haiv"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Casey Marquis" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "haiv",
]

[tool.uv.sources]
haiv = { workspace = true }

[project.urls]
Homepage = "https://github.com/caseymarquis/haiv"
Repository = "https://github.com/caseymarquis/haiv"

[project.entry-points."haiv.commands"]
core = "haiv_core.commands"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haiv_core"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.0",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
