[project]
name = "mg-cli"
version = "0.1.0"
description = "Seamless management of a collaborative AI team"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Casey Marquis" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mg-core",
]

[project.scripts]
mg = "mg_cli:main"

[tool.uv.sources]
mg-core = { workspace = true }

[project.urls]
Homepage = "https://github.com/caseymarquis/mind-games"
Repository = "https://github.com/caseymarquis/mind-games"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mg_cli"]

[dependency-groups]
dev = ["ty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
