[project]
name = "mg-core"
version = "0.1.0"
description = "Core commands for mg"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Casey Marquis" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mg",
]

[tool.uv.sources]
mg = { workspace = true }

[project.urls]
Homepage = "https://github.com/caseymarquis/mind-games"
Repository = "https://github.com/caseymarquis/mind-games"

[project.entry-points."mg.commands"]
core = "mg_core.commands"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mg_core"]

[dependency-groups]
dev = ["ty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
