[project]
name = "mg-tui"
version = "0.1.0"
description = "Terminal UI for mind-games"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Casey Marquis" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "textual",
    "mg",
    "blinker",
]

[tool.uv.sources]
mg = { workspace = true }

[project.scripts]
mg-tui = "mg_tui:main"

[project.urls]
Homepage = "https://github.com/caseymarquis/mind-games"
Repository = "https://github.com/caseymarquis/mind-games"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mg_tui"]

[dependency-groups]
dev = ["ty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
