[project]
name = "haiv-tui"
version = "0.1.0"
description = "Terminal UI for haiv"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Casey Marquis" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "textual",
    "haiv",
    "blinker",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
haiv = { workspace = true }

[project.scripts]
haiv-tui = "haiv_tui:main"

[project.urls]
Homepage = "https://github.com/caseymarquis/haiv"
Repository = "https://github.com/caseymarquis/haiv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haiv_tui"]

[dependency-groups]
dev = ["ty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
