[project]
name = "mg"
version = "0.1.0"
description = "API for building mg commands and workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Casey Marquis" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jinja2>=3.1.6",
    "punq>=0.7.0",
    "tomli-w>=1.0.0",
    "watchdog>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/caseymarquis/mind-games"
Repository = "https://github.com/caseymarquis/mind-games"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ty",
]
