
[project]
name = "mg-user"
version = "0.1.0"
description = "User-level mg commands and configuration"
requires-python = ">=3.11"
dependencies = [
    "mg",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mg_user"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
